syntax = "proto3";

option csharp_namespace = "Service1";

package service1;

service Service1 {
  rpc Method1 (Request1) returns (Response1);
}

message Request1 {
  string message = 1;
}

message Response1 {
  string reply = 1;
}
